tests/import_declare_alias/import_declare_alias.js
import type { Foo } from "./foo"

var x: Foo = 0 // error
